--- a/config/config.json
+++ b/config/config.json
@@ -5,6 +5,7 @@
     "JEWELLER_EMAIL" : "email@example.com",
     "JEWELLER_WEBSITE": "https://www.example.com",
     "JEWELLER_GSTIN": "27AABCU9876Z1Z1",
-    "GOLD_PRICE_PER__GRAM": 5000
+    "GOLD_PRICE_PER__GRAM": 5000,
+    "JEWELLER_LOGO": "images/logo.png"
 
 }
